--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     font-family: 'mYFont';
     src: url(Font/coolvetica/coolvetica\ rg.otf);
 }
+@media (max-width: 600px) {
+
+}
 .scrollable::-webkit-scrollbar {
     display: none;
 }
@@ -36,7 +39,7 @@ nav .container {
 }
 .logo a {
     color: #d9d9d9;
-    font-size: 18px;
+    font-size: 87%;
     padding-left: 20px;
 }
 .menu {
@@ -77,7 +80,7 @@ section {
     background-color: #4F75FF;
 }
 section .container:nth-of-type(1) {
-    padding: 30px 0 30px 84px ;
+    padding: 30px 0 30px 13% ;
     justify-content: center;
     align-items: center;
 }
@@ -85,7 +88,7 @@ section p {
     font-family: mYfont;
     padding: 3px 0 0 0;
     font-weight: lighter;
-    font-size: 23px;
+    font-size: 130%;
     width: 76.39%;
 }
 .img {
@@ -100,7 +103,7 @@ section p {
     padding: 65px 0 65px 0;
 }
 section .container:nth-child(3) {
-    padding: 30px 0 30px 84px ;
+    padding: 30px 0 30px 13% ;
     justify-content: center;
     align-items: center;
 }
@@ -108,7 +111,7 @@ section .container:nth-child(3) p:first-child {
     font-family: mYfont;
     padding: 3px 0 0 0;
     font-weight: bold;
-    font-size: 23px;
+    font-size: 135%;
     width: 76.39%;
 }
 section .container:nth-child(3) p:last-child {
@@ -117,7 +120,7 @@ section .container:nth-child(3) p:last-child {
     font-weight: lighter;
     font-size: 20px;
     width: 76.39%;
-    padding: 20px 0 0 25px  ;
+    padding: 20px 0 0 9%  ;
 }
 section .container:last-child {
     padding: 0;
